# cmake-practice

t1/: CMakeLists.txt
t2/: CMakeLists.txt
t2/doc/: hello.txt
t2/src/: CMakeLists.txt  main.c
t3/: CMakeLists.txt
t3/lib/: CMakeLists.txt  hello.c  hello.h
t3/test/: CMakeLists.txt  main.c  test_hello.c
t4/: CMakeLists.txt  main.c
